feat: adicionando tela de login + autenticacao JWT + personalizações gerais do front

--- a/treinamais-backend/EducaDev.API/appsettings.json
+++ b/treinamais-backend/EducaDev.API/appsettings.json
@@ -11,5 +11,11 @@
     "TextModel": "",
     "TextUrl": "",
     "ModerationUrl":  ""
+  },
+  "Jwt": {
+    "Issuer": "EducaDev",
+    "Audience": "EducaDevFrontend",
+    "Key": "dev-secret-key-change-in-prod-32chars-minimum",
+    "ExpiresMinutes": 120
   }
 }
