feat: trocando nomes antigos do projeto + atualizações no visual

--- a/treinamais-backend/TreinaMais.API/appsettings.json
+++ b/treinamais-backend/TreinaMais.API/appsettings.json
@@ -13,8 +13,8 @@
     "ModerationUrl":  ""
   },
   "Jwt": {
-    "Issuer": "EducaDev",
-    "Audience": "EducaDevFrontend",
+    "Issuer": "TreinaMais",
+    "Audience": "TreinaMaisFrontend",
     "Key": "dev-secret-key-change-in-prod-32chars-minimum",
     "ExpiresMinutes": 120
   }
